--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,8 @@
 github.url=https://api.github.com
 
-spring.datasource.url=jdbc:h2:mem:users;MODE=MySQL;DATABASE_TO_LOWER=TRUE
+spring.datasource.url=jdbc:h2:mem:test;MODE=MySQL;DATABASE_TO_LOWER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=user
+spring.datasource.username=test
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
