--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation "org.mapstruct:mapstruct:1.4.2.Final"
     annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
     testImplementation 'com.github.tomakehurst:wiremock:2.27.2'
+    testImplementation 'io.rest-assured:rest-assured:3.1.1'
+    testImplementation 'com.sun.xml.bind:jaxb-osgi:2.3.2'
 }
 
 dependencyManagement {
