--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-github.url=https://api.github.com
+github.url=http://localhost:0
 
 spring.datasource.url=jdbc:h2:mem:test;MODE=MySQL;DATABASE_TO_LOWER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
